// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ModalPickerSingle ui default 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <div
      class="d-flex align-items-center"
    >
      <button
        class="flex-grow-0 flex-shrink-0 btn btn-primary"
        type="button"
      >
        Select your best friend
      </button>
    </div>
    Some error
  </div>
</div>
`;

exports[`Component: ModalPickerSingle ui default: modal 1`] = `
<div
  style="position: relative; z-index: 1050; display: block;"
  tabindex="-1"
>
  <div
    class=""
  >
    <div
      aria-modal="true"
      class="modal fade"
      role="dialog"
      style="display: block;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Select your best friend
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="search-input"
                >
                  <div
                    class="input-group"
                  >
                    <span
                      class="input-group-text"
                    >
                      <i
                        class="icon material-icons"
                      >
                        search
                      </i>
                    </span>
                    <input
                      aria-label="Start typing to search"
                      class="form-control"
                      id="1"
                      placeholder="Search..."
                      type="search"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-3 row"
            >
              <div
                class="col"
              >
                <div
                  class="form-check"
                >
                  <label
                    class="form-check-label"
                  >
                    <input
                      class="form-check-input"
                      type="radio"
                    />
                    admin@42.nl
                  </label>
                </div>
                <div
                  class="form-check"
                >
                  <label
                    class="form-check-label"
                  >
                    <input
                      class="form-check-input"
                      type="radio"
                    />
                    coordinator@42.nl
                  </label>
                </div>
                <div
                  class="form-check"
                >
                  <label
                    class="form-check-label"
                  >
                    <input
                      class="form-check-input"
                      type="radio"
                    />
                    user@42.nl
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex flex-row justify-content-between modal-footer"
          >
            <div />
            <div>
              <button
                class="ms-1 btn btn-secondary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="ms-1 btn btn-primary disabled"
                disabled=""
                type="button"
              >
                Select
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade"
    />
  </div>
</div>
`;

exports[`Component: ModalPickerSingle ui loading 1`] = `
<div
  style="position: relative; z-index: 1050; display: block;"
  tabindex="-1"
>
  <div
    class=""
  >
    <div
      aria-modal="true"
      class="modal fade"
      role="dialog"
      style="display: block;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Select your best friend
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="search-input"
                >
                  <div
                    class="input-group"
                  >
                    <span
                      class="input-group-text"
                    >
                      <i
                        class="icon material-icons"
                      >
                        search
                      </i>
                    </span>
                    <input
                      aria-label="Start typing to search"
                      class="form-control"
                      id="8"
                      placeholder="Search..."
                      type="search"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-3 row"
            >
              <div
                class="col"
              >
                <div
                  class="text-center"
                >
                  <div
                    class="content-state loading"
                  >
                    <div
                      class="state-icons"
                    >
                      <i
                        class="icon material-icons"
                      >
                        add
                      </i>
                      <i
                        class="icon material-icons"
                      >
                        contrast
                      </i>
                      <i
                        class="icon material-icons"
                      >
                        photo
                      </i>
                      <i
                        class="icon material-icons"
                      >
                        folder_open
                      </i>
                      <i
                        class="icon material-icons"
                      >
                        radio_button_unchecked
                      </i>
                      <i
                        class="icon material-icons"
                      >
                        bolt
                      </i>
                    </div>
                    <div
                      class="state-content"
                    >
                      <svg
                        class="spinner mb-2"
                        height="75"
                        viewBox="25 25 50 50"
                        width="75"
                      >
                        <circle
                          class="path"
                          cx="50"
                          cy="50"
                          fill="none"
                          r="20"
                          stroke="#f0ad4e"
                          stroke-miterlimit="10"
                          stroke-width="4"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="d-block fs-4"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex flex-row justify-content-between modal-footer"
          >
            <div />
            <div>
              <button
                class="ms-1 btn btn-secondary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="ms-1 btn btn-primary disabled"
                disabled=""
                type="button"
              >
                Select
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade"
    />
  </div>
</div>
`;

exports[`Component: ModalPickerSingle ui without value 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <div
      class="d-flex align-items-center"
    >
      <button
        class="flex-grow-0 flex-shrink-0 btn btn-primary"
        type="button"
      >
        Select your best friend
      </button>
    </div>
    Some error
  </div>
</div>
`;
